--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
+
 {
   "name": "myweb",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha" 
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,4 @@
   "devDependencies": {
     "mocha": "^10.8.2"
   }
-
-
 }
