--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build and push Docker image
         env:
-          IMAGE_NAME: gcr.io/${{ secrets.GKE_PROJECT }}/my-app
+          IMAGE_NAME: gcr.io/${{ secrets.GKE_PROJECT }}/myweb
         run: |
           docker build -t $IMAGE_NAME:$GITHUB_SHA .
           docker push $IMAGE_NAME:$GITHUB_SHA
